samples/_failures_safe/1761376765_b6e3d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_764b1696.c: In function ‘main’:
./samples/SAFE/__tmp_764b1696.c:158:21: error: expected ‘;’ at end of input
  158 |     sm.current_state
      |                     ^
      |                     ;
./samples/SAFE/__tmp_764b1696.c:158:5: error: expected declaration or statement at end of input
  158 |     sm.current_state
      |     ^~
